# streaming-lz78

./: .gitignore  CHANGELOG.md  streaming-lz78.cabal
src/Streaming/: LZ78.hs
